fix: remove h2 mt-0 class so classroom page has better spacing within a contentsection

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,9 +88,9 @@
     word-wrap: break-word;
   }
 
-  .prose h2 {
+  /* .prose h2 {
     @apply mt-0;
-  }
+  } */
 
   .prose img {
     @apply my-4 py-4;
